# happy-bit-bloom

./: .env  README.md  index.html  package-lock.json  package.json  tailwind.config.ts
public/wasm/charms-sdk/: README.md
src/: App.tsx  index.css
src/components/: BitcoinAnalyticsDashboard.tsx  BitcoinOSRoadmap.tsx  BollarMint.tsx  BountyCard.tsx  BountyDetailsPanel.tsx  CharmsFlowDiagram.tsx  CreateBountyForm.tsx  CreateEscrowForm.tsx  EscrowCard.tsx  EscrowDetailsPanel.tsx  Header.tsx  MilestoneTracker.tsx  ProtocolAdvisorBot.tsx  ScrollProvingPanel.tsx  WalletConnect.tsx  ZKVerificationPanel.tsx
src/components/ui/: button.tsx  input.tsx  textarea.tsx
src/hooks/: useBollar.ts  useBounty.ts  useEscrow.ts  useMaestro.ts  useRustZKProver.ts  useScroll.ts  useWeb3Wallet.ts  useZKVerification.ts
src/lib/: charm-crypto.ts  charms-modules.ts  charms-sdk.ts  charms-wasm-loader.ts  charms-wasm-sdk.ts  maestro-sdk.ts  rust-api-client.ts  rust-spell-checker.ts  rust-wasm-bridge.ts  rust-zk-prover.ts  scroll-sdk.ts  testnet-transactions.ts  validation.ts
src/pages/: Index.tsx
src/rust/charmix/: Cargo.toml  lib.rs  main.rs  wasm_bindings.rs
src/rust/charms-data/: Cargo.toml  lib.rs  wasm_bindings.rs
src/rust/charms-proof-wrapper/: Cargo.toml
src/rust/charms-proof-wrapper/src/: lib.rs  main.rs
src/rust/charms-sdk/: Cargo.toml  lib.rs  wasm_bindings.rs
src/rust/charms-spell-checker/: Cargo.toml  README.md
src/rust/charms-spell-checker/src/: lib.rs  main.rs
supabase/: config.toml
supabase/functions/proof-wrapper/: index.ts
supabase/functions/protocol-advisor/: index.ts
supabase/functions/spell-checker/: index.ts
