[package]
name = "charmix"
version = "0.1.0"
edition = "2021"
description = "Example Charms spell checker implementation with WASM support"
license = "MIT"
repository = "https://github.com/CharmsDev/charms"

[dependencies]
charms-sdk = { path = "../charms-sdk" }
serde = { version = "1.0", features = ["derive"], optional = true }
serde_json = { version = "1.0", optional = true }
wasm-bindgen = { version = "0.2", optional = true }
serde-wasm-bindgen = { version = "0.6", optional = true }
console_error_panic_hook = { version = "0.1", optional = true }

[dev-dependencies]
# For testing

[features]
default = []
wasm = ["dep:wasm-bindgen", "dep:serde", "dep:serde_json", "dep:serde-wasm-bindgen", "dep:console_error_panic_hook"]

[[bin]]
name = "charmix"
path = "main.rs"

[lib]
crate-type = ["cdylib", "rlib"]
path = "lib.rs"

[profile.release]
opt-level = 3
lto = true

# SP1 zkVM target configuration
[target.'cfg(target_os = "zkvm")'.dependencies]
# zkVM-specific dependencies would go here
