[package]
name = "charms-data"
version = "0.10.0"
edition = "2021"
description = "Core data types for the Charms protocol with WASM support"
license = "MIT"
repository = "https://github.com/CharmsDev/charms"

[dependencies]
serde = { version = "1.0", features = ["derive"], optional = true }
serde_json = { version = "1.0", optional = true }
wasm-bindgen = { version = "0.2", optional = true }
serde-wasm-bindgen = { version = "0.6", optional = true }
console_error_panic_hook = { version = "0.1", optional = true }

[features]
default = ["std"]
std = []
serde = ["dep:serde"]
wasm = ["dep:wasm-bindgen", "dep:serde", "dep:serde_json", "dep:serde-wasm-bindgen", "dep:console_error_panic_hook"]

[lib]
crate-type = ["cdylib", "rlib"]
path = "lib.rs"

[profile.release]
opt-level = "s"
lto = true
