[package]
name = "charms-sdk"
version = "0.10.0"
edition = "2021"
description = "Charms SDK - Build programmable assets on Bitcoin"
license = "MIT"
repository = "https://github.com/CharmsDev/charms"
documentation = "https://docs.charms.dev"
keywords = ["bitcoin", "charms", "zk-proofs", "programmable-assets"]
categories = ["cryptography", "blockchain"]

[dependencies]
charms-data = { path = "../charms-data" }
serde = { version = "1.0", features = ["derive"], optional = true }
bincode = { version = "1.3", optional = true }

[features]
default = ["std"]
std = []
serde = ["dep:serde", "dep:bincode"]

[dev-dependencies]
# Testing dependencies

[lib]
path = "lib.rs"

# Documentation settings
[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
