[package]
name = "charms-sdk"
version = "0.10.0"
edition = "2021"
description = "Charms SDK - Build programmable assets on Bitcoin with WASM support"
license = "MIT"
repository = "https://github.com/CharmsDev/charms"
documentation = "https://docs.charms.dev"
keywords = ["bitcoin", "charms", "zk-proofs", "programmable-assets", "wasm"]
categories = ["cryptography", "blockchain", "wasm"]

[dependencies]
charms-data = { path = "../charms-data" }
serde = { version = "1.0", features = ["derive"], optional = true }
serde_json = { version = "1.0", optional = true }
bincode = { version = "1.3", optional = true }

# WASM dependencies (optional)
wasm-bindgen = { version = "0.2", optional = true }
js-sys = { version = "0.3", optional = true }
serde-wasm-bindgen = { version = "0.6", optional = true }
console_error_panic_hook = { version = "0.1", optional = true }

[features]
default = ["std"]
std = []
serde = ["dep:serde", "dep:bincode"]
wasm = [
    "dep:wasm-bindgen", 
    "dep:js-sys", 
    "dep:serde-wasm-bindgen", 
    "dep:console_error_panic_hook",
    "dep:serde",
    "dep:serde_json"
]

[dev-dependencies]
wasm-bindgen-test = "0.3"

[lib]
crate-type = ["cdylib", "rlib"]
path = "lib.rs"

[profile.release]
opt-level = "s"
lto = true

# Documentation settings
[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
